# LCMPCF_Layered_Composable_Multi_Protocol_Communication_Fabric

./: .gitignore  Dockerfile  README.md  create_csves.py  debug_taxonomy.py  docker-compose.yml  pyproject.toml  pytest.ini  repo-index.json  requirements-dev.txt  verify_complete.py
.docs/: ARCHITECTURE.md  arch_tax_fixed.html  architecture_summary.json  architecture_taxonomy.html  architecture_taxonomy.json  architecture_taxonomy.mmd  cloudflare_osi_model_concept.md  domain_dependency_summary.json  folder_taxonomy.json  folder_taxonomy.mmd  osi_layer_components_matrix.csv  taxonomy_structure.json
.docs/roadmap_to_full_production_ready/: README.md  domains.csv  extracted_new_components.csv  files.csv  subdomains.csv  tree.md
.docs/usage_integration_examples/: base_actor_communication.py  both_modes_comparison.md
graph/: __init__.py  cli.py  parsers.py  translate_csv.py
graph/parsers/: __init__.py  concerns_parser.py  dependency_parser.py  structural_parser.py  tasks_parser.py
graph/presentation/: __init__.py  presenter.py  web_api.py  web_ui.py
src/: Docker.md  main.py
src/application/: __init__.py  fastapi_router.py
src/network/: __init__.py  protocol.py
src/presentation/: __init__.py  pipeline.py  protocol.py  request_types.py
src/protocols/: __init__.py  cli_handler.py  error_mapper.py  graphql_handler.py  grpc_handler.py  http_handler.py  inprocess_handler.py  local_ipc_handler.py  protocol.py  webhook_handler.py
src/session/: ICheckpointSync.py  ISessionLifecycle.py  __init__.py  coordinator.py  factory.py  (+4 more)
tests/: test_live_protocol_switch.py
(+145 files in other folders)
