[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-protocol-communication-fabric"
version = "0.1.0"
description = "Cross-Language Logging System - Multi-Protocol Communication Fabric"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]